# QAIC

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  Makefile.am  NOTICE  README.md  SECURITY.md  configure.ac
inc/: AEEStdDef.idl  remote.idl  util.h
src/: Makefile  Qidlc.hs  qaic.cabal
src/Compiler/: CommandLineArgs.hs  Compile.hs  Data.hs  Version.hs
src/Control/: MonadUtils.hs
src/Data/: ListUtils.hs  LittleBinary.hs
src/Data/Omg/: Literal.hs  Prim.hs
src/Language/C/: Pretty.hs  TypeDesc.hs
src/Language/Idl/: Comment.hs  Data.hs  DoxygenComment.hs  Parser.hs  ParserState.hs  SourcePos.hs  ToPalette.hs  Token.hs
src/Language/Palette/: Alignment.hs  Data.hs
src/Language/Preprocessor/: Cpp.hs
src/Language/SO/: Allocator.c  Args.hs  CStub.c  Cfg.hs  Code.hs  Env.c  IdlBackend.hs  Literal.hs  Pack.hs  Skel.c  Slim.c  Stub.c  ToCSkel.hs  ToCStub.hs  ToHeader.hs  ToSkel.hs  ToStub.hs  Wstring.c
src/Language/Slim/: Alignment.hs  Data.hs  Doc.hs  Names.hs  Ref.hs  Serialize.hs  State.hs  ToSlim.hs  TypeRefMap.hs
src/System/: FilePathUtils.hs
src/System/Console/: GetOpt.hs
src/file2hs/: file2hs.cabal  file2hs.hs
testcases/: Makefile.am  README.md  configure.ac
testcases/array/: Makefile.am
testcases/array/inc/: array.idl
testcases/array/src/: array_imp.c  array_main.c  array_test.c  array_test.h
testcases/buffer_argument_testcase/: Makefile.am
testcases/buffer_argument_testcase/inc/: buffer_argument_testcase.idl
testcases/buffer_argument_testcase/src/: buffer_argument_testcase_imp.c  buffer_argument_testcase_macros.h  buffer_argument_testcase_main.c  buffer_argument_testcase_test.c  buffer_argument_testcase_test.h  testcases.c  verify.h
testcases/calculator/: Makefile.am
testcases/calculator/inc/: calculator.idl
testcases/calculator/src/: calculator_imp.c  calculator_test.c
testcases/complex_seq/: Makefile.am
testcases/complex_seq/inc/: complex_seq.idl
testcases/complex_seq/src/: complex_seq_imp.c  complex_seq_main.c  complex_seq_test.c  complex_seq_test.h
testcases/complex_sequence_1/: Makefile.am
testcases/complex_sequence_1/inc/: complex_sequence_1.idl
testcases/complex_sequence_1/src/: complex_sequence_1_imp.c  complex_sequence_1_main.c  complex_sequence_1_test.c  complex_sequence_1_test.h
testcases/complex_sequence_2/: Makefile.am
testcases/complex_sequence_2/inc/: complex_sequence_2.idl
testcases/complex_sequence_2/src/: complex_sequence_2_imp.c  complex_sequence_2_main.c  complex_sequence_2_test.c  complex_sequence_2_test.h  verify.h
testcases/complex_struct/: Makefile.am
testcases/complex_struct/inc/: complex_struct.idl
testcases/complex_struct/src/: complex_struct_imp.c  complex_struct_main.c  complex_struct_test.c  complex_struct_test.h
testcases/include_idl_1/: Makefile.am
testcases/include_idl_1/inc/: foo.idl  include_idl_1.idl
testcases/include_idl_1/src/: include_idl_1_imp.c  include_idl_1_main.c  include_idl_1_test.c  include_idl_1_test.h
testcases/include_idl_2/: Makefile.am
testcases/include_idl_2/inc/: foo.idl  include_idl_2.idl
testcases/include_idl_2/src/: include_idl_2_imp.c  include_idl_2_main.c  include_idl_2_test.c  include_idl_2_test.h
testcases/include_idl_3/: Makefile.am
testcases/include_idl_3/inc/: foo.idl  include_idl_3.idl
testcases/include_idl_3/src/: include_idl_3_imp.c  include_idl_3_main.c  include_idl_3_test.c  include_idl_3_test.h
testcases/qaic_string/: Makefile.am
testcases/qaic_string/inc/: qaic_string.idl
testcases/qaic_string/src/: qaic_string_imp.c  qaic_string_main.c  qaic_string_test.c  qaic_string_test.h  verify.h
testcases/qaic_testcase/: Makefile.am
testcases/qaic_testcase/inc/: qaic_testcase.idl
testcases/qaic_testcase/src/: qaic_testcase_imp.c  qaic_testcase_main.c  qaic_testcase_test.c  qaic_testcase_test.h  verify.h
testcases/qaic_wstring/: Makefile.am
testcases/qaic_wstring/inc/: qaic_wstring.idl
testcases/qaic_wstring/src/: qaic_wstring_imp.c  qaic_wstring_main.c  qaic_wstring_test.c  qaic_wstring_test.h  verify.h
testcases/test_mt_31_methods/: Makefile.am
testcases/test_mt_31_methods/inc/: test_mt_31_methods.idl
testcases/test_mt_31_methods/src/: test_mt_31_methods_imp.c  test_mt_31_methods_main.c  test_mt_31_methods_test.c  test_mt_31_methods_test.h  verify.h
testcases/util/: util.c  util.h
