Name:                qaic
Version:             0.0
Description:         qaic compiler
license:             BSD-3-Clause-Clear
copyright:           Copyright (c) Qualcomm Technologies, Inc. and/or its subsidiaries
Author:              anatoly yakovenko
Build-Type:          Simple
Cabal-Version:       >=1.2

Executable qaic
  Main-is:           Qidlc.hs
  ghc-options:       -Wall -threaded -O3
  Build-Depends:     base,
                     bytestring,
                     filepath,
                     syb,
                     array,
                     parsec,
                     binary,
                     directory,
                     process,
                     pretty,
                     containers,
                     transformers,
                     mtl,
                     text
  Other-Modules:     Compiler.CommandLineArgs,
                     Compiler.Compile,
                     Compiler.Data,
                     Compiler.Version,
                     Control.MonadUtils,
                     Data.ListUtils,
                     Data.LittleBinary,
                     Data.Omg.Literal,
                     Data.Omg.Prim,
                     Language.C.Pretty,
                     Language.C.TypeDesc,
                     Language.Idl.Comment,
                     Language.Idl.Data,
                     Language.Idl.DoxygenComment,
                     Language.Idl.Parser,
                     Language.Idl.ParserState,
                     Language.Idl.SourcePos,
                     Language.Idl.ToPalette,
                     Language.Idl.Token,
                     Language.Palette.Alignment,
                     Language.Palette.Data,
                     Language.Preprocessor.Cpp,
                     Language.SO.Allocator,
                     Language.SO.Args,
                     Language.SO.CStub,
                     Language.SO.Cfg,
                     Language.SO.Code,
                     Language.SO.Env,
                     Language.SO.IdlBackend,
                     Language.SO.Literal,
                     Language.SO.Pack,
                     Language.SO.Skel,
                     Language.SO.Slim,
                     Language.SO.Stub,
                     Language.SO.ToCSkel,
                     Language.SO.ToCStub,
                     Language.SO.ToHeader,
                     Language.SO.ToSkel,
                     Language.SO.ToStub,
                     Language.SO.Wstring,
                     Language.Slim.Alignment,
                     Language.Slim.Data,
                     Language.Slim.Doc,
                     Language.Slim.Names,
                     Language.Slim.Ref,
                     Language.Slim.Serialize,
                     Language.Slim.State,
                     Language.Slim.ToSlim,
                     Language.Slim.TypeRefMap,
                     System.Console.GetOpt,
                     System.FilePathUtils